# fastapi-car-dealership

./: README.md  benchmark.sh  cars_service.py  dev.py  main.py  pyproject.toml
app/: cars_service.py  exceptions.py  main.py  models.py  responses.py
app/routers/: cars_router.py
bruno/cars/: CreateCar.bru  DeleteCar.bru  GetAllCars.bru  GetCarById.bru  UpdateCar.bru
docs/: FASTAPI_ASYNC_GUIDE.md
scripts/: dev.py  free_port.py  prod.py
tests/: test_cars.py
