[project]
name = "fastapi-car-dealership"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
